# pico-sdk-flight-software

./: .gitignore  README.md
Batt_Pico_sdk/: CMakeLists.txt  battery_firm_v0.9.0_backup_20241104_120200.uf2  battery_firm_v0.9.2.uf2  battery_firm_v0.9.2_backup_20241104_202018.uf2  battery_firm_v0.9.3.uf2  battery_firm_v0.9.3_backup_20241104_215216.uf2  battery_firm_v0.9.4 2.uf2  battery_firm_v0.9.4.uf2  battery_firm_v0.9.4_backup_20241105_151928.uf2  battery_firm_v0.9.4_backup_20241105_152145.uf2  battery_firm_v0.9.4_backup_20241105_155232.uf2  battery_firm_v0.9.4_backup_20241105_160112.uf2  battery_firm_v0.9.4_backup_20241105_161500.uf2  battery_firm_v0.9.5.uf2  battery_firm_v0.9.5_backup_20241108_214524.uf2  battery_firm_v0.9.5_backup_20241108_214921.uf2  battery_firm_v0.9.5_backup_20241108_215210.uf2  battery_firm_v0.9.5_backup_20241108_220831.uf2  battery_firm_v0.9.5_backup_20241108_223922.uf2  battery_firm_v0.9.5_backup_20241110_153016.uf2  battery_keyboard_test.uf2  (+38 more)
Batt_Pico_sdk/Battery_Software/: CMakeLists.txt  build.sh
Batt_Pico_sdk/Battery_Software/boot/: CMakeLists.txt  blink.pio  neopixel.pio
Batt_Pico_sdk/Battery_Software/lib/: CMakeLists.txt
Batt_Pico_sdk/Battery_Software/lib 2/functions/: functions.cpp  functions.h
Batt_Pico_sdk/Battery_Software/lib 2/main/: main.cpp  main.h
Batt_Pico_sdk/Battery_Software/lib 2/neopixel/: neopixel.cpp
Batt_Pico_sdk/Battery_Software/lib 2/pysquared/: pysquared.cpp
Batt_Pico_sdk/Battery_Software/lib/device_drivers/: ADS1015.cpp  INA219.cpp  INA219.h  MCP25625.cpp  MCP25625.h  PCA9685.cpp  VL6180.cpp  VL6180.h
Batt_Pico_sdk/Battery_Software/lib/device_drivers/software-uart/: CMakeLists.txt  software-uart.cpp  software-uart.h  uart_rx.pio
Batt_Pico_sdk/Battery_Software/lib/functions/: functions.cpp  functions.h
Batt_Pico_sdk/Battery_Software/lib/main/: main.cpp  main.h
Batt_Pico_sdk/Battery_Software/lib/pysquared/: pysquared.cpp  pysquared.h
Batt_Pico_sdk/Battery_Software/lib/tools/: tools.cpp  tools.h
(+508 files in other folders)
